--- a/Flexible article.html
+++ b/Flexible article.html
@@ -10,15 +10,18 @@
   <body>
     <main>
       <article class="article">
+        <img src="./assets/imgs/honey.jpg" alt="honey" />
         <div class="article-content">
           <h2>Our delicious honey</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime
-            sint sunt veniam eveniet dignissimos reprehenderit mollitia magnam!
-            Eligendi deserunt reiciendis repudiandae doloribus, officia placeat
-            ratione cum aperiam molestias accusantium nisi.
+            Il miele è una sostanza dolce prodotta dalle api, in particolare
+            dalle api domestiche come l'Apis mellifera. Le api raccolgono il
+            nettare dalle piante e lo trasformano in miele attraverso un
+            processo di digestione e disidratazione. Esso è composto
+            principalmente da zuccheri, acqua, enzimi e minerali ed è noto per
+            le sue proprietà benefiche, come azione decongestionante e calmante
+            della tosse, oltre al suo utilizzo come alimento energetico.
           </p>
-          <img src="./assets/imgs/honey.jpg" alt="honey" />
         </div>
       </article>
     </main>
