--- a/Navigation bar.html
+++ b/Navigation bar.html
@@ -3,20 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>bar</title>
+    <title>Nav bar</title>
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/Navigation bar.css" />
   </head>
   <body>
     <header>
       <nav>
-        <button>Our Honey</button>
-        <button>Trace Honey</button>
-        <button>
-          <img src="./assets/imgs/logo.png" alt="logo" id="logo" />SHOP
-        </button>
-        <button>Facilities</button>
-        <button>Contacts</button>
+        <div class="small">Our Honey</div>
+        <div class="small">Trace Honey</div>
+        <div class="big">
+          <img src="./assets/imgs/logo.png" alt="logo" id="logo" />
+          <div id="big">SHOP</div>
+        </div>
+        <div class="small">Facilities</div>
+        <div class="small">Contacts</div>
       </nav>
     </header>
   </body>
