--- a/Product card.html
+++ b/Product card.html
@@ -9,13 +9,21 @@
   </head>
   <body>
     <main>
-      <article class="card">
-        <img src="./assets/imgs/honey.jpg" alt="honey" />
+      <article class="prod-card">
+        <img src="./assets/imgs/honey.jpg" alt="honey" class="img-prod" />
         <div class="card-content">
-          <h2>100% Bio Honey</h2>
-          <p>Italian, not treated</p>
-          <p>7$/kg</p>
-          <button>Add to cart</button>
+          <div class="prod-data">
+            <div class="prod-name">
+              <h2>100% Bio Honey</h2>
+              <p>Italian, not treated</p>
+            </div>
+            <div class="prod-price">
+              <p>7$/kg</p>
+            </div>
+          </div>
+          <div class="button-prod">
+            <button>Add to cart</button>
+          </div>
         </div>
       </article>
     </main>
