--- a/index.html
+++ b/index.html
@@ -5,80 +5,130 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Honey</title>
     <link rel="stylesheet" href="./assets/css/reset.css" />
-    <link rel="stylesheet" href="./assets/css/Navigation bar.css" />
-    <link rel="stylesheet" href="./assets/css/Product card.css" />
-    <link rel="stylesheet" href="./assets/css/article.css" />
     <link rel="stylesheet" href="./assets/css/index.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <button>Our Honey</button>
-        <button>Trace Honey</button>
-        <button>
-          <img src="./assets/imgs/logo.png" alt="logo" id="logo" />SHOP
-        </button>
-        <button>Facilities</button>
-        <button>Contacts</button>
-      </nav>
-    </header>
-    <main>
-      <h1 id="first-title">Best Selling Products</h1>
-      <section class="container">
-        <article class="card">
-          <img src="./assets/imgs/honey.jpg" alt="honey" />
-          <div class="card-content">
-            <h2>100% Bio Honey</h2>
-            <p>Italian, not treated</p>
-            <p>7$/kg</p>
-            <button>Add to cart</button>
+    <div class="wrapper">
+      <header>
+        <nav>
+          <div class="small">Our Honey</div>
+          <div class="small">Trace Honey</div>
+          <div class="big">
+            <img src="./assets/imgs/logo.png" alt="logo" id="logo" />
+            <div id="big">SHOP</div>
           </div>
-        </article>
-        <article class="card">
-          <img src="./assets/imgs/honey.jpg" alt="honey" />
-          <div class="card-content">
-            <h2>100% Bio Honey</h2>
-            <p>Italian, not treated</p>
-            <p>7$/kg</p>
-            <button>Add to cart</button>
-          </div>
-        </article>
-      </section>
-      <section class="container">
-        <article class="card">
-          <img src="./assets/imgs/honey.jpg" alt="honey" />
-          <div class="card-content">
-            <h2>100% Bio Honey</h2>
-            <p>Italian, not treated</p>
-            <p>7$/kg</p>
-            <button>Add to cart</button>
-          </div>
-        </article>
-        <article class="card">
-          <img src="./assets/imgs/honey.jpg" alt="honey" />
-          <div class="card-content">
-            <h2>100% Bio Honey</h2>
-            <p>Italian, not treated</p>
-            <p>7$/kg</p>
-            <button>Add to cart</button>
-          </div>
-        </article>
-      </section>
-      <h2 id="second-title">Latest News</h2>
-      <section class="container">
+          <div class="small">Facilities</div>
+          <div class="small">Contacts</div>
+        </nav>
+      </header>
+      <main>
+        <h1 class="h1">Best Selling Products</h1>
+        <div class="container-flex">
+          <article class="prod-card">
+            <img src="./assets/imgs/honey.jpg" alt="honey" class="img-prod" />
+            <div class="card-content">
+              <div class="prod-data">
+                <div class="prod-name">
+                  <h2>100% Bio Honey</h2>
+                  <p>Italian, not treated</p>
+                </div>
+                <div class="prod-price">
+                  <p>7$/kg</p>
+                </div>
+              </div>
+              <div class="button-prod">
+                <button>Add to cart</button>
+              </div>
+            </div>
+          </article>
+          <article class="prod-card">
+            <img src="./assets/imgs/honey.jpg" alt="honey" class="img-prod" />
+            <div class="card-content">
+              <div class="prod-data">
+                <div class="prod-name">
+                  <h2>100% Bio Honey</h2>
+                  <p>Italian, not treated</p>
+                </div>
+                <div class="prod-price">
+                  <p>7$/kg</p>
+                </div>
+              </div>
+              <div class="button-prod">
+                <button>Add to cart</button>
+              </div>
+            </div>
+          </article>
+          <article class="prod-card">
+            <img src="./assets/imgs/honey.jpg" alt="honey" class="img-prod" />
+            <div class="card-content">
+              <div class="prod-data">
+                <div class="prod-name">
+                  <h2>100% Bio Honey</h2>
+                  <p>Italian, not treated</p>
+                </div>
+                <div class="prod-price">
+                  <p>7$/kg</p>
+                </div>
+              </div>
+              <div class="button-prod">
+                <button>Add to cart</button>
+              </div>
+            </div>
+          </article>
+          <article class="prod-card">
+            <img src="./assets/imgs/honey.jpg" alt="honey" class="img-prod" />
+            <div class="card-content">
+              <div class="prod-data">
+                <div class="prod-name">
+                  <h2>100% Bio Honey</h2>
+                  <p>Italian, not treated</p>
+                </div>
+                <div class="prod-price">
+                  <p>7$/kg</p>
+                </div>
+              </div>
+              <div class="button-prod">
+                <button>Add to cart</button>
+              </div>
+            </div>
+          </article>
+          <article class="prod-card">
+            <img src="./assets/imgs/honey.jpg" alt="honey" class="img-prod" />
+            <div class="card-content">
+              <div class="prod-data">
+                <div class="prod-name">
+                  <h2 class="h3">100% Bio Honey</h2>
+                  <p>Italian, not treated</p>
+                </div>
+                <div class="prod-price">
+                  <p>7$/kg</p>
+                </div>
+              </div>
+              <div class="button-prod">
+                <button>Add to cart</button>
+              </div>
+            </div>
+          </article>
+        </div>
+
+        <h2 class="h2">Latest News</h2>
         <article class="article">
+          <img src="./assets/imgs/honey.jpg" alt="honey" />
           <div class="article-content">
-            <h2 id="second-title">Our delicious honey</h2>
+            <h2 class="h2">Our delicious honey</h2>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime
-              sint sunt veniam eveniet dignissimos reprehenderit mollitia
-              magnam! Eligendi deserunt reiciendis repudiandae doloribus,
-              officia placeat ratione cum aperiam molestias accusantium nisi.
+              Il miele è una sostanza dolce prodotta dalle api, in particolare
+              dalle api domestiche come l'Apis mellifera. Le api raccolgono il
+              nettare dalle piante e lo trasformano in miele attraverso un
+              processo di digestione e disidratazione. Esso è composto
+              principalmente da zuccheri, acqua, enzimi e minerali ed è noto per
+              le sue proprietà benefiche, come azione decongestionante e
+              calmante della tosse, oltre al suo utilizzo come alimento
+              energetico.
             </p>
-            <img src="./assets/imgs/honey.jpg" alt="honey" />
           </div>
         </article>
-      </section>
-    </main>
+      </main>
+    </div>
   </body>
 </html>
